--- a/jogo/style.css
+++ b/jogo/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: #000;
+    background: #9d00ff;
     color: #fff;
     font-family: sans-serif;
     text-align: center;
